fixed dropdown not appearing. wrong color

--- a/app/css/1-basics/_color.sass
+++ b/app/css/1-basics/_color.sass
@@ -2,11 +2,11 @@
  // Colors for all elements //
 /*--------------------------*
 
+#dropbtn div
+  background-color: $accent
+
 a, p
   color: $accent-two
-
-div
-  color: $accent
 
 .modal
   background-color: rgba(0,0,0,0.4)
